<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Brtax" >


 

    <Button
        android:id="@+id/consultButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/TextPriceProduct"
        android:layout_marginBottom="22dp"
        android:gravity="center"
        android:onClick="consultTax"
        android:text="@string/consultTribute" />

    <EditText
        android:id="@+id/eanText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textEan"
        android:layout_centerHorizontal="true"
        android:ems="13"
        android:gravity="center"
        android:hint="@string/ean"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/TextPriceProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageBarCode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:gravity="center"
        android:text="@string/price"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextPriceProduct"
        android:layout_below="@+id/TextPriceProduct"
        android:ems="6"
        android:gravity="center"
        android:hint="@string/zero"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textEan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:gravity="center"
        android:text="@string/consultEan"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageButton
        android:id="@+id/imageBarCode"
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:layout_below="@+id/eanText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/ean"
        android:gravity="center"
        android:onClick="capture"
        android:src="@drawable/ean" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/consultButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:visibility="invisible"
        android:max="100" />
 
</RelativeLayout>